css/portfoliostyle.css
/**********************************
GLOBAL
***********************************/
*{
    box-sizing: border-box;
}
html {
    position:relative;
    min-height: 100%;
    background: #464866;
  }
  body {
    min-height: 100vh;
  }
/* ---------------------------------------------- */


/**********************************
FONTS
***********************************/
.content-heading, .dropdown{
    font-family: 'Montserrat', sans-serif;
}
.content-container, .footer-text{
    font-family: 'Open Sans', sans-serif;
}
/* ---------------------------------------------- */


/**********************************
COLOR, HEADINGS and p
***********************************/
body {
    display: flex;
    flex-direction: column;
    background: linear-gradient(
        to bottom, 
        #464866 0px, 
        #464866 200px, 
        #AAABB8 200px,
        #AAABB8 5000px
      );
      margin: 0;
      background-repeat: no-repeat;
  }
h1, .footer-text {
    color: #2E9CCA
}
h5, nav, a{
    color: white;
}
/* ---------------------------------------------- */


.wrapper{
    flex: auto;
}
/**********************************
HEADING
***********************************/
.content-heading{
    text-align: center;
}
.dropdown * {
    display: flex;
    flex-direction: column;
    align-items: center;
}
.dropdown {
    width: 100%;
    position: sticky;
    display: inline-block;
    top: -0.8px;
}
/* Change visuals in all the elements inside dropdown */
.dropdown * {
    width: 100%;
    color: white;
    background-color: #29648A;
    border-bottom: 1px solid white;
    cursor: pointer;
}
/* ---------------------------------------------- */


/**********************************
BUTTON "SMALL SCREEN"
***********************************/
.dropbtn{
    border: 1px solid white;
    visibility: visible;
}
/* Content dropdown */
.dropbtn, a{
    padding: 12px 16px;
}
.dropdown-content{
    display: none;
    border: none;
    position: absolute;
    width: 100%;
    text-align: center;
    z-index: 1;
}
/* Links inside the dropdown */
.dropdown-content a {
    text-decoration: none;
    display: block;
}
/* Show dropdown on hover */
.dropdown:hover .dropdown-content{
    visibility: visible;
    display: block;
}
/* Change color of dropdown links on hover */
.dropdown a:hover{
    background-color: #D5D5D5;
    color: #2E9CCA;
}
/* Color change on dropdown button when content is shown */
.dropdown:hover .dropbtn{
    background-color: #D5D5D5;
    color: #6D7993;
    border: 1px solid #6D7993;
    border-top: 1px solid #9099A2;
    border-left: 1px solid #9099A2;
    border-right: 1px solid #9099A2;
}
/* ---------------------------------------------- */


/**********************************
MENU BIG SCREEN
***********************************/
.big-menu-content{
    visibility: hidden;
    display: flex;
    flex-shrink: 0;
    flex-direction: row;
    justify-content: flex-end;
}
.big-menu-nav{
    padding: 50px 0 0 0;
}
.big-menu-nav a{
    padding: 14px 14px;
    text-decoration: none;
    border: 1px solid #29648A;
    background-color: #29648A;
}
.big-menu-nav a:hover{
    border: 1px solid #D5D5D5;
    background-color: #D5D5D5;
    color: #2E9CCA;
}
/* ---------------------------------------------- */


/**********************************
MAIN CONTENT
***********************************/
.content-container{
    padding-top: 50px;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

/* Slideshow container */
.slider-holder{
    width: 300px;
    height: 300px;
    background-color: yellow;
    margin-left: auto;
    margin-right: auto;
    margin-top: 0px;
    text-align: center;
    overflow: hidden;
}
.image-holder{
    width: 600px;
    background-color: red;
    height: 300px;
    clear: both;
    position: relative;

    -webkit-transition: left 2s;
    -moz-transition: left 2s;
    -o-transition: left 2s;
    transition: left 2s;
}
.slider-image{
    float: left;
    margin: 0px;
    padding: 0px;
    position: relative;
}
#slider-image-1:target ~ .image-holder
{
    left: 0px;
}

#slider-image-2:target ~ .image-holder
{
    left: -300px;
}
.button-holder
{
    position: relative;
    top: -20px;
}

.slider-change
{
    display: inline-block;
    height: 10px;
    width: 10px;
    border-radius: 5px;
    background-color: brown;
}
/* ---------------------------------------------- */


/**********************************
FOOTER
***********************************/
#footer{
    flex-shrink: 0;
    padding: 15px 0 10px 0;
    background-color: #464866;
}
.social-icon{
    width: 20px;
    height: 20px;
}
.footer-spacing + .footer-spacing{
    margin-left: 10px;
}
.footer-text{
    margin: 5px;
}
.copyright{
    font-size: 12px;
}
.footer-center{
    text-align: center;
}
/* ---------------------------------------------- */

